--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npm i "
+    "build":"npm install && npm install --prefix client && npm run build --prefix client"
   },
   "author": "manansanson",
   "license": "ISC",
